# weed_locator

./: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
calibration_targets/: delta_corner_observations.yaml  delta_discovery_dashboard.txt  delta_discovery_progress.yaml  delta_hand_eye.yaml  delta_safe_9_waypoints.yaml
config/: so101_kinematics.yaml
config/SO101/: so101_joint_display_offsets.yaml  so101_new_calib.urdf  so101_no_elbow.urdf
config/handeye_workbench/: 已知不符合要求点.yaml  手眼标定采点原始.yaml  执行设置.yaml  标定运动范围.yaml  采点设置文件.yaml
docs/: delta_handeye_recalibration_20260616.md  delta_xiangqi_demo_reproduce.md  so101_smooth_motion_handoff_20260708.md
firmware/esp32/: RampsStepper.cpp  RampsStepper.h  command.cpp  command.h  config.h  endstop.cpp  endstop.h  equipment.cpp  esp-bk1.txt  esp32.ino  interpolation.cpp  interpolation.h  pinout.h  queue.h  robotGeometry.cpp  备份1.txt  测试正反转.txt
launch/: delta_gcode_bridge.launch.py  delta_pick_stack.launch.py  ks3518_pwm_servo.launch.py  lerobot_so101_bridge.launch.py  local_chess_test.launch.py  local_delta_hand_eye.launch.py  local_delta_hand_eye_cv.launch.py  local_handeye_workbench.launch.py  weed_locator.launch.py  weed_locator_demo.launch.py  weed_locator_simulation.launch.py  weed_system.launch.py
rviz/: delta_rgbd_pointcloud.rviz
scripts/: arm_keyboard_control.py  check_ee_position.py  chess_detector.py  chess_handeye_target.py  chess_test_gui.py  colored_pointcloud_from_rgbd.py  conveyor_controller.py  conveyor_pick_scheduler.py  debug_placo_nq.py  delta_charuco_calibration.py  delta_fit_camera_delta_model.py  delta_hand_eye_split_by_z.py  delta_handeye_workbench.py  delta_keyboard_jog.py  delta_safe_calibration_control.py  delta_safe_control_gui.py  delta_visual_pick_demo.py  delta_waypoint_runner.py  delta_workspace_auto_runner.py  depth_image_visualizer.py  depth_to_color_registration.py  fake_dynamixel_node.py  hand_eye_calibration.py  joint_state_bridge.py  lerobot_empirical_keyboard_jog.py  lerobot_frame_markers.py  lerobot_ik_jog.py  lerobot_ik_keyboard_jog.py  lerobot_joint_diagnostic.py  lerobot_joint_jog.py  lerobot_joint_offset_tuner.py  lerobot_no_elbow_ik_keyboard_jog.py  lerobot_real_sim_angle_tuner.py  lerobot_servo_smoothness_probe.py  lerobot_setup_single_motor.py  lerobot_so101_bridge.py  lerobot_so101_profiled_bridge.py  lerobot_tcp_marker.py  lerobot_z_keyboard_scan.py  lerobot_z_response_scan.py  (+10 more)
srv/: MoveJoint.srv  ReadJoints.srv  SolveIK.srv  WriteJoints.srv
tools/delta_handeye/: check_chess_on_tool_once.sh  home_and_reach_chess_once.sh  reach_chess_once.sh  restart_delta_control_only_detached.sh  restart_delta_handeye_detached.sh  start_chess_test_detached.sh  start_delta_control_gui_only.sh  start_delta_handeye.sh
weed_locator/: delta_gcode_bridge.py  dynamixel_node.py  ik_service.py  ks3518_pwm_servo_node.py  so101_kinematics.py  target_commander.py  weed_fusion_node.py
weed_locator/srv/: __init__.py  _move_joint.py  _move_joint_s.c  _read_joints.py  _read_joints_s.c  _write_joints.py  _write_joints_s.c
